--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -157,7 +157,7 @@
 
         <div class="table_container mt-3">
             
-                <table class="teacher_table mx-auto">
+                <table class="_table mx-auto">
                     <caption>Teacher's List</caption>
                     <tr class="table_title">
                         <th>Name</th>
