view report page, scrollar on tabs

--- a/attendancePage.html
+++ b/attendancePage.html
@@ -44,28 +44,14 @@
                 <div class="nav_list"> <a href="#" class="nav_link">
                         <i class='bx bxs-dashboard bx-sm'></i> <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="#" class="nav_link active">
-                        <i class='bx bx-calendar-check bx-sm'></i>
-                        <spanlass="nav_name">Attendance</span>
-                    </a>
+                        <a href="#" class="nav_link active">
+                            <i class='bx bx-calendar-check bx-sm'></i>
+                            <span class="nav_name">Attendance</span>
+                        </a>
 
                     <a href="#" class="nav_link">
                         <i class='bx bx-bar-chart-alt-2 bx-sm'></i> <span class="nav_name">Report</span>
                     </a>
-
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown button
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </div>
-
-
-
                 </div>
             </nav>
         </div>
