--- a/createform.html
+++ b/createform.html
@@ -26,9 +26,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css"
-        rel="stylesheet">
     <!-- end -->
 
     <title>Create Student Form</title>
@@ -74,30 +71,45 @@
                 <!-- <div class="scroller scroller-left float-start mt-2 arrows"><i class="fa fa-chevron-left"></i></div>
                 <div class="scroller scroller-right float-end mt-2 arrows"><i class="fa fa-chevron-right"></i></div> -->
                 <div class="wrapper-nav">
-                    <nav class="nav nav-tabs list mt-2" id="myTab" role="tablist">
-                        <a class="nav-item nav-link nav_item below_header_btn active" data-toggle="tab" href="#tab1" role="tab"
-                            aria-controls="public" aria-expanded="true">Tab1</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab2" role="tab" data-toggle="tab">Tab 2</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab3" role="tab" data-toggle="tab">Tab 3</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab4" role="tab" data-toggle="tab">Tab 4</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab5" role="tab" data-toggle="tab">Tab 5</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab6" role="tab" data-toggle="tab">Tab 6</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab7" role="tab" data-toggle="tab">Tab 7</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab8" role="tab" data-toggle="tab">Tab 8</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab9" role="tab" data-toggle="tab">Tab 9</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab10" role="tab" data-toggle="tab">Tab 10</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab11" role="tab" data-toggle="tab">Tab 11</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab12" role="tab" data-toggle="tab">Tab 12</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab13" role="tab" data-toggle="tab">Tab 13</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab14" role="tab" data-toggle="tab">Tab 14</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab15" role="tab" data-toggle="tab">Tab 15</a>
-                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab16" role="tab" data-toggle="tab">Tab 16</a>
+                    <nav class="nav nav-tabs list mt-2 d-flex justify-content-between" id="myTab" role="tablist">
+                        <a class="nav-item nav-link nav_item below_header_btn active" data-toggle="tab" href="#tab1"
+                            role="tab" aria-controls="public" aria-expanded="true">Tab1</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab2" role="tab"
+                            data-toggle="tab">Create Student group</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab3" role="tab"
+                            data-toggle="tab">Tab 3</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab4" role="tab"
+                            data-toggle="tab">Tab 4</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab5" role="tab"
+                            data-toggle="tab">Tab 5</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab6" role="tab"
+                            data-toggle="tab">Tab 6</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab7" role="tab"
+                            data-toggle="tab">Tab 7</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab8" role="tab"
+                            data-toggle="tab">Tab 8</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab9" role="tab"
+                            data-toggle="tab">Tab 9</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab10" role="tab"
+                            data-toggle="tab">Tab 10</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab11" role="tab"
+                            data-toggle="tab">Tab 11</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab12" role="tab"
+                            data-toggle="tab">Tab 12</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab13" role="tab"
+                            data-toggle="tab">Tab 13</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab14" role="tab"
+                            data-toggle="tab">Tab 14</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab15" role="tab"
+                            data-toggle="tab">Tab 15</a>
+                        <a class="nav-item nav-link nav_item below_header_btn" href="#tab16" role="tab"
+                            data-toggle="tab">Tab 16</a>
                     </nav>
                 </div>
             </div>
+        </div>
 
-
-            <!-- <div class="tabs">
+        <!-- <div class="tabs">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item nav_item" role="presentation">
                         <button class="nav-link below_header_btn" data-bs-toggle="tab" data-bs-target="#overview"
@@ -120,7 +132,7 @@
                     </li>                  
                 </ul>
             </div> -->
-        </div>
+
 
         <!--Create Form start-->
 
